fix window and menuBar z-index problem

--- a/System/style.css
+++ b/System/style.css
@@ -15,6 +15,7 @@ body {
 	width: 100%;
 	margin-top: 40px;
 	
+	z-index: 0;
 	position: absolute;
 }
 
